# uminer

./: .gitignore  .gitmodules  .mailmap  .travis.yml  AUTHORS  CONTRIBUTING.md  COPYING  COPYING.LESSER  Dockerfile  Dockerfile.alltools  Makefile  README.md  SECURITY.md  appveyor.yml  circle.yml  go.mod  interfaces.go  oss-fuzz.sh
accounts/: accounts.go  accounts_test.go  errors.go  hd.go  hd_test.go  manager.go  sort.go  url.go  url_test.go
bm_chip/: CMakeLists.txt  README.md
bm_chip/bmlib/: CMakeLists.txt  Makefile
bm_chip/bmlib/bm-smi/: CMakeLists.txt  Makefile
bm_chip/bmlib/bm-smi/include/: bm-smi.hpp  bm_smi_cmdline.hpp  bm_smi_recovery.hpp
bm_chip/bmlib/bm-smi/src/: bm_smi_display.cpp  bm_smi_display_memory_detail.cpp  bm_smi_display_util_detail.cpp  bm_smi_recovery.cpp
bm_chip/bmlib/include/: bmlib_runtime.h
bm_chip/bmlib/src/: bm1682_runtime.cpp  bmcpu_internal.h  bmcpu_runtime.cpp  bmkernel_runtime.cpp  bmlib_device.cpp  bmlib_device.h  bmlib_internal.h  bmlib_memory.cpp  bmlib_memory.h  bmlib_mmpool.cpp  bmlib_mmpool.h  bmlib_profile.cpp  bmlib_profile.h  bmlib_runtime.cpp  bmlib_util.cpp
bm_chip/bmlib/src/linux/: bmlib_ioctl.cpp  bmlib_ioctl.h
bm_chip/bmlib/src/window/: bmlib_ioctl.cpp  bmlib_ioctl.h
bm_chip/bmlib/tools/: CMakeLists.txt  Makefile  Makefile_local  bin2hex.cpp  bm_firmware_update.cpp  bm_gmem_alloc.cpp  bm_memset.cpp  bm_pthread_create.cpp  bm_test_stat.cpp  data2inc.cpp  data_convert.cpp  file_divider.cpp  l2_sram_table.cpp  sc5_burning_tool.cpp  update_boot_info.cpp
bm_chip/bmlib/tools/diff_dump/: Makefile  diff_dump.cpp
bm_chip/common/bm1684/include/: bm_api_struct.h  global_layer_data_split.h  message.h
bm_chip/common/bm1684/src/: global_pooling_data_split.c
bm_chip/common/bm1686/include/: message.h
bm_chip/config/: bm_config.h
bm_chip/src/: CMakeLists.txt  chip.cpp  chip.h  chipBurning.cpp  chipDetails.cpp  chipSignature.cpp  chipStart.cpp  chipVerify.cpp  main.cpp  util.h
bm_chip/src/key/: p2_10  p2_5  p2_6  p2_8  pubkey_10  pubkey_5  pubkey_6  pubkey_8
common/: .gitignore  big.go  bytes.go  bytes_test.go  debug.go  format.go  generate.go  path.go  size.go  size_test.go  test_utils.go  types.go  types_test.go
consensus/: consensus.go  errors.go  merger.go
console/: bridge.go  bridge_test.go  console.go  console_test.go
core/: bench_test.go  block_validator.go  block_validator_test.go  blockchain.go  blockchain_insert.go  blockchain_reader.go  blockchain_repair_test.go  blockchain_sethead_test.go  blockchain_snapshot_test.go  blockchain_test.go  blocks.go  bloom_indexer.go  chain_indexer.go  chain_indexer_test.go  chain_makers.go  chain_makers_test.go  dao_test.go  error.go  events.go  evm.go  forkchoice.go  gaspool.go  gen_genesis.go  gen_genesis_account.go  genesis.go  genesis.json  genesis_alloc.go  genesis_test.go  headerchain.go  headerchain_test.go  mkalloc.go  rlp_test.go  sender_cacher.go  state_prefetcher.go  state_processor.go  state_processor_test.go  state_transition.go  types.go
crypto/: crypto.go  crypto_test.go  signature_cgo.go  signature_nocgo.go  signature_test.go
event/: event.go  event_test.go  example_feed_test.go  example_scope_test.go  example_subscription_test.go  example_test.go  feed.go  feed_test.go  feedof.go  feedof_test.go  multisub.go  multisub_test.go  subscription.go  subscription_test.go
graphql/: graphiql.go  graphql.go  graphql_test.go  schema.go  service.go
les/: api.go  api_backend.go  api_test.go  benchmark.go  bloombits.go  client.go  client_handler.go  commons.go  costtracker.go  distributor.go  distributor_test.go  enr_entry.go  handler_test.go  metrics.go  odr.go  odr_requests.go  odr_test.go  peer.go  peer_test.go  protocol.go  request_test.go  retrieve.go  server.go  server_handler.go  server_requests.go  servingqueue.go  state_accessor.go  test_helper.go  txrelay.go
light/: lightchain.go  lightchain_test.go  odr.go  odr_test.go  odr_util.go  postprocess.go  trie.go  trie_test.go  txpool.go  txpool_test.go
log/: README_ETHEREUM.md  doc.go  format.go  handler_glog.go
metrics/: config.go  cpu.go  cpu_disabled.go  cpu_enabled.go  cputime_nop.go  cputime_unix.go  disk.go  disk_linux.go  disk_nop.go  inactive.go  metrics.go
miner/: miner.go  miner_test.go  ordering.go  ordering_test.go  payload_building.go  payload_building_test.go  worker.go  worker_test.go
node/: api.go  api_test.go  config.go  config_test.go  defaults.go  doc.go  endpoints.go  errors.go  jwt_auth.go  jwt_handler.go  lifecycle.go  node.go  node_auth_test.go  node_example_test.go  node_test.go  rpcstack.go  rpcstack_test.go  utils_test.go
p2p/: dial.go  dial_test.go  message.go  message_test.go  metrics.go  peer.go  peer_error.go  peer_test.go  protocol.go  server.go  server_nat.go  server_nat_test.go  server_test.go  transport.go  transport_test.go  util.go  util_test.go
params/: bootnodes.go  config.go  config_test.go  dao.go  denomination.go  network_params.go  protocol_params.go  version.go
rlp/: decode.go  decode_tail_test.go  decode_test.go  doc.go  encbuffer.go  encbuffer_example_test.go  encode.go  encode_test.go  encoder_example_test.go  iterator.go  iterator_test.go  raw.go  raw_test.go  safe.go  typecache.go  unsafe.go
rpc/: client.go  client_example_test.go  client_opt.go  client_opt_test.go  client_test.go  context_headers.go  doc.go  endpoints.go  errors.go  handler.go  http.go  http_test.go  inproc.go  ipc.go  ipc_js.go  ipc_unix.go  ipc_windows.go  json.go  metrics.go  server.go  server_test.go  service.go  stdio.go  subscription.go  subscription_test.go  testservice_test.go  types.go  types_test.go  websocket.go  websocket_test.go
software/: go.mod
swarm/: README.md
tests/: block_test.go  block_test_util.go  difficulty_test.go  difficulty_test_util.go  gen_btheader.go  gen_difficultytest.go  gen_stenv.go  gen_sttransaction.go  init.go  init_test.go  rlp_test.go  rlp_test_util.go  state_test.go  state_test_util.go  transaction_test.go  transaction_test_util.go
trie/: committer.go  database.go  database_test.go  encoding.go  encoding_test.go  errors.go  (+21 more)
(+1273 files in other folders)
